# snn-sound-localization

./: .buildinfo  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING-old.html  CONTRIBUTING-old.md  CONTRIBUTING.md  CONTRIBUTINGold.html  CONTRIBUTINGold.md  Code-of-Conduct.html  Code-of-Conduct.md  Contributing.html  Contributing.md  License  Quick_Start_Delay_DCLS.html  Quick_Start_Delay_DCLS.ipynb  Quick_Start_random.html  Quick_Start_random.ipynb  README.md  ReadMe.html  ReadMe.md  _toc.yml  environment.yml  genindex.html  index.html  index.md  myst.yml  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  temo_patch.patch  website-home-page.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_sources/: CONTRIBUTING-old.md  CONTRIBUTINGold.md  Contributing.md  ReadMe.md
_static/: style-mods.css
add-code-of-conduct/: .buildinfo  index.html
doc_changes/: .buildinfo  search.html
main/: .buildinfo  objects.inv  search.html  searchindex.js
notebooks/: introduction.html  introduction.ipynb  test-nb.html
paper/: discussion.html  meta_science.html  myst.yml  organising.md  paper.bib  paper.html  paper.md
research/: 2-Questions.md  3-Starting-Notebook.ipynb  4-Quick_Start.ipynb  5-new_inh_model.ipynb  Alt-Filter-and-Fire_Neuron_Model_SNN.html  Alt-Filter-and-Fire_Neuron_Model_SNN.ipynb  Altering-output-neurons.html  Altering-output-neurons.ipynb  Altering_output_neurons.html  Altering_output_neurons.ipynb  Analysing-Trained-Networks-Part2.html  Analysing-Trained-Networks-Part2.ipynb  Analysing-Trained-Networks.html  (+47 more)
(+105 files in other folders)
