[tool.poetry]
name = "ssl"
version = "0.0.1"
description = "Collaborative project for modelling sound localization with SNNs"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
