[tool.poetry]
name = "spikeloc"
version = "0.0.1"
description = "Collaborative project for modelling sound localization with SNNs"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
